# indoor-localization-device

./: .gitignore  DEVELOPMENT-LOG.md  PROGRESS_LOG.md  PROGRESS_LOG_AJ.md  README.md
documents/: Project_Proposal.tex
documents/paper-submissions/Project-Proposal-2025-10-7/: Project-Proposal-2025-10-7.tex
documents/paper-submissions/System-Specification-2025-11-11/: System-Specification-2025-11-11.tex
documents/software-architecture/: logic_flowchart.canvas
documents/software_architecture/: logic_flowchart.canvas
documents/system-specification/2025-11-11/: 2025-11-11.tex
documents/technical-briefs/2025-10-8/: 2025-10-8.tex
documents/weekly-progression-submissions/Template/: Template.tex
indoor-localization-app/: main.py  project_reference.md
indoor-localization-app/data/: dummy_ble_map.json  dummy_map.json  jack_brown_hall.json
indoor-localization-app/scripts/: map_creator.py
indoor-localization-app/tests/: test_ekf.py  test_graph.py  test_pathfinder.py
scripts/: map_creator.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/tire-lib/: CMakeLists.txt
src/tire-lib/include/tire/: Announcer.h  BLEFingerprinting.h  EKF.h  PDR.h  Pathfinder.h
src/tire-lib/include/tire/interfaces/: HardwareInterface.h  RaspberryPiHardware.h  SimulatedHardware.h
src/tire-lib/private/: Announcer.cpp  BLEFingerprinting.cpp  EKF.cpp  NavigationGraph.cpp  PDR.cpp  Pathfinder.cpp
src/tire-lib/private/interfaces/: RaspberryPiHardware.cpp  SimulatedHardware.cpp
tire/: project_reference.md
tire/src/positioning/: ekf.py  (+1 more)
tire/tests/: test_graph.py
(+11 files in other folders)
